--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h3 class="">Daryl Jake N. De Guzman</h3>
-                          <img class="img-circle img-responsive img-center" style="200x100" src="profile.png" alt="">
+                        <h3>Daryl Jake N. De Guzman</h3>
+                          <img class="img-circle img-responsive img-center" style="200x100" src="profile.png/300x300" alt="">
                         <p class="intro-text">WEB DEVELOPER-FOOD EATER-BASSIST
                             <br>Created by GOD.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
