--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h3>Daryl Jake N. De Guzman</h3>
-                          <img class="img-circle img-responsive img-center" style="width:300px;height:300px" src="profile.png" alt="">
+                          <img class="img-circle img-responsive img-center" style="width:300px;height:300px" src="profilef.png" alt="">
                         <p class="intro-text">WEB DEVELOPER-FOOD EATER-BASSIST
                             <br>Created by GOD.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
