--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
+                       <img class="img-circle img-responsive img-center" style="width:200px;height:200px" src="profilef.png" alt="">
                         <h3>Daryl Jake N. De Guzman</h3>
-                          <img class="img-circle img-responsive img-center" style="width:200px;height:200px" src="profilef.png" alt="">
                         <p class="intro-text">WEB DEVELOPER-FOOD EATER-BASSIST
                             <br>Created by GOD.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
@@ -122,7 +122,7 @@
                 <h2>Contact Jajoke</h2>
                 <p>Just call me or text me for more details.</p>
                 <p>09277733423 20 pesos regular</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <p><a href="https://mail.google.com/mail/u/0/">daryl.jakepogi@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -140,7 +140,7 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!--<div id="map"></div>-->
 
     <!-- Footer -->
     <footer>
