--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Jajoke</h2>
                 <p><br>Just call me or text me for more details.
-               09277733423 20 pesos regular</br></p>
-              <br><a href="https://mail.google.com/mail/u/0/">daryl.jakepogi@gmail.com</br></a>
+               09277733423 20 pesos regular
+              <a href="https://mail.google.com/mail/u/0/">daryl.jakepogi@gmail.com</br></a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
