--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h2>About</h2>
                 <p>I am who I am and nobody cares.I'm happy with my self.I love eating delicious food such as dessert,vegies,pork,meat and chicken.</p>
                      <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-triple-down animated"></i>
+                            <i class="fa fa-angle-double-down animated"></i>
                         </a>
                 <!--- <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
@@ -124,8 +124,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Jajoke</h2>
                 <p><br>Just call me or text me for more details.
-               09277733423 20 pesos regular
-              <a href="https://mail.google.com/mail/u/0/">daryl.jakepogi@gmail.com</br></a>
+               <br>09277733423 20 pesos regular
+             <br><a href="https://mail.google.com/mail/u/0/"><em>daryl.jakepogi@gmail.com</em></a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
