--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Jajoke</h2>
                 <p><br>Just call me or text me for more details.
-               <br>09277733423 20 pesos regular
+               <br>09277733423 20 pesos regular</p>
              <br><a href="https://mail.google.com/mail/u/0/"><em>daryl.jakepogi@gmail.com</em></a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
