--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                       <img class="img-circle img-responsive img-center" style="width:200px;height:200px" src="profilef.png" alt="">
+                       <img class="img-circle img-responsive "align:center style="width:200px;height:200px" src="profilef.png" alt="">
                         <h3>Daryl Jake N. De Guzman</h3>
                         <p class="intro-text">WEB DEVELOPER-FOOD EATER-BASSIST
                             <br>Created by GOD.</p>
@@ -123,7 +123,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Jajoke</h2>
-                <p><br>Just call me or text me for more details.
+                <p>Just call me or text me for more details.
                <br>09277733423 20 pesos regular</p>
              <br><a href="https://mail.google.com/mail/u/0/"><em>daryl.jakepogi@gmail.com</em></a>
                 </p>
