--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                       <img class="img-circle img-responsive" style="width:200px;height:200px;align:center" src="profilef.png" alt="">
+                       <img class="img-circle img-responsive" style="width:200px;height:200px" src="profilef.png" alt="">
                         <h3>Daryl Jake N. De Guzman</h3>
                         <p class="intro-text">WEB DEVELOPER-FOOD EATER-BASSIST
                             <br>Created by GOD.</p>
