--- a/index.html
+++ b/index.html
@@ -92,6 +92,30 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
+                <p align="center"><strong>DE GUZMAN, DARYL JAKE N.</strong><br>
+	<em><u>daryl.jakepogi@gmail.com</u></em><br>
+	Purok 5 Rimando Road Baguio City,Philippines</br></p>
+	<hr><h2 style="color:red">PERSONAL BACKGROUND</h2>
+	<p>I am currently a student of University of Cordilleras taking up Information Technology major in Web Technology Track.
+	I love surfing sites that will make me busy with it.I'm fun doing church activities and playing instrument.
+    Playing basketball with my friends and with my cousins is the best time to my hobby.</br></p><hr>
+<hr><h2 style="color:red">SCHOOL ATTENDED</h2>
+<ul><li>Saint Louis University ........................................ S.A. 2015-2016</li></ul>
+		Andres Bonifacio Baguio City</br></p>
+<ul><li>Mapandan Catholic School...................................S.A. 2012-2015</li></ul>
+	Poblacion, Mapandan Pangasinan Philppines</br></p>
+<ul><li>Rich Golden Shower Montessori Center...............S.A. 2004-2010</li></ul>
+	Antipolo Rizal,Philippines</p><hr>
+<hr><h2 style="color:red">SKILLS</h2>
+<ul><li>Managing time </li></ul>
+<ul><li>Computer literate</li></ul>
+<ul><li>Programming Skills</li></ul>
+<ul><li>fixing errors at computer</li></ul><hr>
+<hr><h2 style="color:red">EXPERIENCES</h2>
+<ul><li>Computer Programming contest(2015)</li></ul>
+<ul><li>Intramurals badminton champion(2015)</li></ul>
+<ul><li>Mr and Ms Intrams 2016 Contestant</li></ul>
+<ul><li>Facilitates Church Programs</li></ul><hr>
                 <p>I am who I am and nobody cares.I'm happy with my self.I love eating delicious food such as dessert,vegies,pork,meat and chicken.</p>
                   
                 <!--- <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
