--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 <ul><li>Intramurals badminton champion(2015)</li></ul>
 <ul><li>Mr and Ms Intrams 2016 Contestant</li></ul>
 <ul><li>Facilitates Church Programs</li></ul><hr>
-                <p>I am who I am and nobody cares.I'm happy with my self.I love eating delicious food such as dessert,vegies,pork,meat and chicken.</p>
-                  
+                
                 <!--- <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>--->
@@ -131,7 +130,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Quotes</h2>
-                    <p>Once you learn to quit it becomes a habit.(it depends.HAHAHA)</p>
+                    <p>Once you learn to quit it becomes a habit.</p>
                    <!--- <h2>Download Grayscale</h2>
                     <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
                     <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>-->
@@ -146,8 +145,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Jajoke</h2>
                 <p>Just call me or text me for more details.
-               <br>09277733423 20 pesos regular</p>
-             <br><a href="https://mail.google.com/mail/u/0/"><em>daryl.jakepogi@gmail.com</em></a>
+               <br>09277733423</p>
+             <a href="https://mail.google.com/mail/u/0/"><em>daryl.jakepogi@gmail.com</em></a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
