--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i> <span class="light">My</span>Resume
                 </a>
             </div>
 
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                       <img class="img-circle img-responsive" style="width:200px;height:200px" src="profilef.png" alt="">
+                      <center> <img class="img-circle img-responsive" style="width:200px;height:200px" src="profilef.png" alt=""></center>
                         <h3>Daryl Jake N. De Guzman</h3>
                         <p class="intro-text">WEB DEVELOPER-FOOD EATER-BASSIST
                             <br>Created by GOD.</p>
