--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
 	I love surfing sites that will make me busy with it.I'm fun doing church activities and playing instrument.
     Playing basketball with my friends and with my cousins is the best time to my hobby.</br></p><hr>
 <hr><h2 style="color:red">SCHOOL ATTENDED</h2>
-<ul><li>Saint Louis University ........................................ S.A. 2015-2016</li></ul>
+<ul>Saint Louis University ........................................ S.A. 2015-2016</ul>
 		Andres Bonifacio Baguio City</br></p>
-<ul><li>Mapandan Catholic School...................................S.A. 2012-2015</li></ul>
+<ul>Mapandan Catholic School...................................S.A. 2012-2015</ul>
 	Poblacion, Mapandan Pangasinan Philppines</br></p>
-<ul><li>Rich Golden Shower Montessori Center...............S.A. 2004-2010</li></ul>
+<ul>Rich Golden Shower Montessori Center...............S.A. 2004-2010</ul>
 	Antipolo Rizal,Philippines</p><hr>
 <hr><h2 style="color:red">SKILLS</h2>
-<ul><li>Managing time </li></ul>
-<ul><li>Computer literate</li></ul>
-<ul><li>Programming Skills</li></ul>
-<ul><li>fixing errors at computer</li></ul><hr>
+<ul>Managing time</ul>
+<ul>Computer literate</ul>
+<ul>Programming Skills</ul>
+<ul>fixing errors at computer</ul><hr>
 <hr><h2 style="color:red">EXPERIENCES</h2>
-<ul><li>Computer Programming contest(2015)</li></ul>
-<ul><li>Intramurals badminton champion(2015)</li></ul>
-<ul><li>Mr and Ms Intrams 2016 Contestant</li></ul>
-<ul><li>Facilitates Church Programs</li></ul><hr>
+<ul>Computer Programming contest(2015)</ul>
+<ul>Intramurals badminton champion(2015)</ul>
+<ul>Mr and Ms Intrams 2016 Contestant</ul>
+<ul>Facilitates Church Programs</ul><hr>
                 
                 <!--- <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
