--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About</h2>
+                <h2 style="color:red">About</h2>
                 <p align="center"><strong>DE GUZMAN, DARYL JAKE N.</strong><br>
 	<em><u>daryl.jakepogi@gmail.com</u></em><br>
 	Purok 5 Rimando Road Baguio City,Philippines</br></p>
